--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "irazasyed/telegram-bot-sdk": "^3.13",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "reinvanoyen/oak-console-table": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
